Fix C23 (GCC 15) WIN32 compatibility for rb_define_* functions

Backport [Bug #21286]